<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_gravity="center">

    <ImageView
        android:id="@+id/taskerImg"
        android:layout_marginTop="10dp"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:scaleType="centerCrop"
        android:clipToOutline="true"
        android:background="@drawable/circular_image"
        android:src="@drawable/task_img" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20sp"
        android:text="@string/taskAvailable_text"
        android:textSize="28sp"
        android:gravity="center"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/help_text"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="@color/purple_grey"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bookTask_text"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="@color/purple_grey"/>

</LinearLayout>