<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.TaskScheduledFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/taskScheduledRecView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:visibility="visible"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/noTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:visibility="gone">

        <ImageView
            android:id="@+id/taskerImg"
            android:layout_marginTop="10dp"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:scaleType="centerCrop"
            android:clipToOutline="true"
            android:background="@drawable/circular_image"
            android:src="@drawable/task_img" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20sp"
            android:text="@string/taskAvailable_text"
            android:textSize="28sp"
            android:gravity="center"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_text"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/purple_grey"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bookTask_text"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/purple_grey"/>

    </LinearLayout>

</FrameLayout>